# serializer version: 1
# name: TestCartPoleCostEqual.test_snapshot
  2.7395604855596334
# ---
# name: TestCartPoleCostEqual.test_snapshot.1
  -0.024448624099179084
# ---
# name: TestCartPoleCostEqual.test_snapshot.10
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.11
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.12
  dict({
    'reference': array([0., 0.]),
    'reference_error': array([-2.73907151, -0.14501811]),
    'state_of_interest': array([2.73907151, 0.14501811]),
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.13
  2.742812040695489
# ---
# name: TestCartPoleCostEqual.test_snapshot.14
  0.1373521677359711
# ---
# name: TestCartPoleCostEqual.test_snapshot.15
  0.14115849335141145
# ---
# name: TestCartPoleCostEqual.test_snapshot.16
  -0.07676570293056856
# ---
# name: TestCartPoleCostEqual.test_snapshot.17
  3.3458442263874915
# ---
# name: TestCartPoleCostEqual.test_snapshot.18
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.19
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.2
  0.14343916796455297
# ---
# name: TestCartPoleCostEqual.test_snapshot.20
  dict({
    'reference': array([0., 0.]),
    'reference_error': array([-2.74281204, -0.14115849]),
    'state_of_interest': array([2.74281204, 0.14115849]),
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.21
  2.745559084050208
# ---
# name: TestCartPoleCostEqual.test_snapshot.22
  0.41483476162456334
# ---
# name: TestCartPoleCostEqual.test_snapshot.23
  0.13962317929280008
# ---
# name: TestCartPoleCostEqual.test_snapshot.24
  -0.44748678167775646
# ---
# name: TestCartPoleCostEqual.test_snapshot.25
  3.2752360650207124
# ---
# name: TestCartPoleCostEqual.test_snapshot.26
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.27
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.28
  dict({
    'reference': array([0., 0.]),
    'reference_error': array([-2.74555908, -0.13962318]),
    'state_of_interest': array([2.74555908, 0.13962318]),
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.29
  2.7538557792826994
# ---
# name: TestCartPoleCostEqual.test_snapshot.3
  0.07894721162374557
# ---
# name: TestCartPoleCostEqual.test_snapshot.30
  0.5667135704060806
# ---
# name: TestCartPoleCostEqual.test_snapshot.31
  0.13067344365924494
# ---
# name: TestCartPoleCostEqual.test_snapshot.32
  -0.6321720124467993
# ---
# name: TestCartPoleCostEqual.test_snapshot.33
  2.8786232308241715
# ---
# name: TestCartPoleCostEqual.test_snapshot.34
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.35
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.36
  dict({
    'reference': array([0., 0.]),
    'reference_error': array([-2.75385578, -0.13067344]),
    'state_of_interest': array([2.75385578, 0.13067344]),
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.37
  2.765190050690821
# ---
# name: TestCartPoleCostEqual.test_snapshot.38
  0.24856720024803347
# ---
# name: TestCartPoleCostEqual.test_snapshot.39
  0.11803000341030895
# ---
# name: TestCartPoleCostEqual.test_snapshot.4
  dict({
    'reference': array([0., 0.]),
    'reference_error': array([-2.73956049, -0.14343917]),
    'state_of_interest': array([2.73956049, 0.14343917]),
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.40
  -0.12071230469371952
# ---
# name: TestCartPoleCostEqual.test_snapshot.41
  2.363114934355879
# ---
# name: TestCartPoleCostEqual.test_snapshot.42
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.43
  False
# ---
# name: TestCartPoleCostEqual.test_snapshot.44
  dict({
    'reference': array([0., 0.]),
    'reference_error': array([-2.76519005, -0.11803   ]),
    'state_of_interest': array([2.76519005, 0.11803   ]),
  })
# ---
# name: TestCartPoleCostEqual.test_snapshot.5
  2.7390715130776497
# ---
# name: TestCartPoleCostEqual.test_snapshot.6
  0.18702638089196827
# ---
# name: TestCartPoleCostEqual.test_snapshot.7
  0.14501811219702787
# ---
# name: TestCartPoleCostEqual.test_snapshot.8
  -0.19298094228082074
# ---
# name: TestCartPoleCostEqual.test_snapshot.9
  3.526937509947416
# ---
